deleted vk parse token

--- a/experiments/load_data.ipynb
+++ b/experiments/load_data.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOKEN_USER = 'vk1.a.ime3n4NS1itmOlShAWKIwK8vRDiEWkFJgjpbZSwCGkG_ioIjVFxPxbW-G3jPv19OmWPCG0tu6XHLuP4aQNCOWckJFUUziY2lMLSjPofcUYo8kLIHarHZJwYt4kDhuUPnsQbrmnkoPeFnwf1uYeGwEeTC9pHty-sihBDgns_9lIy38IVLmqoK9yK3hNCuMeVjE60c7gL_FPiJbijUjfNm7w'\n",
+    "TOKEN_USER = '...'\n",
     "VERSION = 5.131"
    ]
   },
