new version of stat model

--- a/experiments/load_data.ipynb
+++ b/experiments/load_data.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "3a07f90e-021c-4bf5-a57a-5cea91cc9e91",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,8 @@
     "import requests\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
-    "import time"
+    "import time\n",
+    "import re"
    ]
   },
   {
@@ -57,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOKEN_USER = '...'\n",
+    "TOKEN_USER = 'vk1.a.ime3n4NS1itmOlShAWKIwK8vRDiEWkFJgjpbZSwCGkG_ioIjVFxPxbW-G3jPv19OmWPCG0tu6XHLuP4aQNCOWckJFUUziY2lMLSjPofcUYo8kLIHarHZJwYt4kDhuUPnsQbrmnkoPeFnwf1uYeGwEeTC9pHty-sihBDgns_9lIy38IVLmqoK9yK3hNCuMeVjE60c7gL_FPiJbijUjfNm7w'\n",
     "VERSION = 5.131"
    ]
   },
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "9029c7b0-7ce8-47fb-8f28-16f038a7adff",
    "metadata": {},
    "outputs": [
@@ -558,7 +559,7 @@
        "18"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "dd6d768a-6aa1-4810-9dc5-5c1432aa2b39",
    "metadata": {},
    "outputs": [
@@ -582,7 +583,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████| 18/18 [00:22<00:00,  1.26s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████| 18/18 [00:22<00:00,  1.25s/it]\n"
      ]
     }
    ],
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "965efdfa-ad08-4c71-a131-df49286ff4fb",
    "metadata": {},
    "outputs": [
@@ -713,7 +714,371 @@
    ],
    "source": [
     "data = pd.DataFrame({'text':result})\n",
-    "display(data)\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ff3deb74-c5ab-48de-85bb-96c1813a5c5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ENGletters = list('abcdefghijklmnopqrstuvwxyz' + 'abcdefghijklmnopqrstuvwxyz'.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e0617413-e56c-4d4e-9376-a7c6f6b72be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Сильно пьяного Пушкина не пускают на бал. Лерм...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Что делает вебкам-модель на маяке? \\n \\nСветит...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Заходит человек в магазин тканей: \\n— Отмерьте...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Штирлиц обкурился, стоит перед зеркалом: \\n \\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>— Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796419</th>\n",
+       "      <td>В один престижный бутик заходит блондинистая к...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796420</th>\n",
+       "      <td>Маршрутка. Заходит бабулька божий одуванчик. П...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796421</th>\n",
+       "      <td>И чего только пьяному человеку в голову не при...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796422</th>\n",
+       "      <td>Двое мужиков покупают водку. К верхушке бутылк...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796423</th>\n",
+       "      <td>Мой друг входит в топ-менеджмент одного банка....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>796424 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     text\n",
+       "0       Сильно пьяного Пушкина не пускают на бал. Лерм...\n",
+       "1       Что делает вебкам-модель на маяке? \\n \\nСветит...\n",
+       "2       Заходит человек в магазин тканей: \\n— Отмерьте...\n",
+       "3       Штирлиц обкурился, стоит перед зеркалом: \\n \\n...\n",
+       "4       — Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...\n",
+       "...                                                   ...\n",
+       "796419  В один престижный бутик заходит блондинистая к...\n",
+       "796420  Маршрутка. Заходит бабулька божий одуванчик. П...\n",
+       "796421  И чего только пьяному человеку в голову не при...\n",
+       "796422  Двое мужиков покупают водку. К верхушке бутылк...\n",
+       "796423  Мой друг входит в топ-менеджмент одного банка....\n",
+       "\n",
+       "[796424 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data[~data['text'].str.contains('|'.join(ENGletters))]\n",
+    "data.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9148402a-fb86-4bb7-b2d3-51c8c5a09e2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Сильно пьяного Пушкина не пускают на бал. Лерм...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Что делает вебкам-модель на маяке? \\n \\nСветит...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Заходит человек в магазин тканей: \\n— Отмерьте...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Штирлиц обкурился, стоит перед зеркалом: \\n \\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>— Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319761</th>\n",
+       "      <td>Это абсолютно реальная история, которую расска...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319762</th>\n",
+       "      <td>В один престижный бутик заходит блондинистая к...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319763</th>\n",
+       "      <td>Маршрутка. Заходит бабулька божий одуванчик. П...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319764</th>\n",
+       "      <td>И чего только пьяному человеку в голову не при...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319765</th>\n",
+       "      <td>Мой друг входит в топ-менеджмент одного банка....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>319766 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     text\n",
+       "0       Сильно пьяного Пушкина не пускают на бал. Лерм...\n",
+       "1       Что делает вебкам-модель на маяке? \\n \\nСветит...\n",
+       "2       Заходит человек в магазин тканей: \\n— Отмерьте...\n",
+       "3       Штирлиц обкурился, стоит перед зеркалом: \\n \\n...\n",
+       "4       — Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...\n",
+       "...                                                   ...\n",
+       "319761  Это абсолютно реальная история, которую расска...\n",
+       "319762  В один престижный бутик заходит блондинистая к...\n",
+       "319763  Маршрутка. Заходит бабулька божий одуванчик. П...\n",
+       "319764  И чего только пьяному человеку в голову не при...\n",
+       "319765  Мой друг входит в топ-менеджмент одного банка....\n",
+       "\n",
+       "[319766 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.drop_duplicates()\n",
+    "data = data.reset_index(drop=True)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b3eb6f3d-a9d7-4830-88db-e290b1c908af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([     0,      1,      2, ..., 319763, 319764, 319765])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_ind = data['text'].apply(lambda x: re.sub(r'[^а-яА-Я0-9]', '', x.lower())).drop_duplicates().index.values\n",
+    "unique_ind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4cce169c-1823-4e2b-ae44-d126ac402ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Сильно пьяного Пушкина не пускают на бал. Лерм...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Что делает вебкам-модель на маяке? \\n \\nСветит...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Заходит человек в магазин тканей: \\n— Отмерьте...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Штирлиц обкурился, стоит перед зеркалом: \\n \\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>— Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233678</th>\n",
+       "      <td>Это абсолютно реальная история, которую расска...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233679</th>\n",
+       "      <td>В один престижный бутик заходит блондинистая к...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233680</th>\n",
+       "      <td>Маршрутка. Заходит бабулька божий одуванчик. П...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233681</th>\n",
+       "      <td>И чего только пьяному человеку в голову не при...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233682</th>\n",
+       "      <td>Мой друг входит в топ-менеджмент одного банка....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>233683 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     text\n",
+       "0       Сильно пьяного Пушкина не пускают на бал. Лерм...\n",
+       "1       Что делает вебкам-модель на маяке? \\n \\nСветит...\n",
+       "2       Заходит человек в магазин тканей: \\n— Отмерьте...\n",
+       "3       Штирлиц обкурился, стоит перед зеркалом: \\n \\n...\n",
+       "4       — Смотрел вчера хоккей? \\n— Да. \\n— Видал как ...\n",
+       "...                                                   ...\n",
+       "233678  Это абсолютно реальная история, которую расска...\n",
+       "233679  В один престижный бутик заходит блондинистая к...\n",
+       "233680  Маршрутка. Заходит бабулька божий одуванчик. П...\n",
+       "233681  И чего только пьяному человеку в голову не при...\n",
+       "233682  Мой друг входит в топ-менеджмент одного банка....\n",
+       "\n",
+       "[233683 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.iloc[unique_ind]\n",
+    "data = data.reset_index(drop=True)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cb753fca-7ce3-48bd-bd27-57dd7d253326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data.to_csv('anekdots_result.csv', index=False)"
    ]
   }
